Use `List.getFirst()/getLast()`